Renamed unknown request -> unregonized request

--- a/templates/unrecognized.pug
+++ b/templates/unrecognized.pug
@@ -27,6 +27,6 @@ html(lang="en")
               table(cellspacing="0" cellpadding="0" border="0" width="100%")
                 tr
                   td(class="content")
-                    | Unknown request, please retry.
+                    | Unrecognized request, please retry.
 
       <!--[if mso]></td></tr></table><![endif]-->
