--- a/email.scss
+++ b/email.scss
@@ -1,1 +1,39 @@
-// TODO Step 4: make the email pretty
+body {
+    font-family: Arial, Helvetica, sans-serif 
+}
+
+.center-content {
+    display: grid;
+    grid-template-columns: 250px auto;
+    grid-template-rows: 25px auto 25px;
+    grid-gap: 5px;
+    grid-auto-rows: minmax(100px, auto);
+    grid-auto-columns: minmax(250px, auto);
+}
+
+.side-nav {
+    grid-column: 1;
+    grid-row: 1;
+    grid-row-start: span 2;
+    width: 250px;
+    background-color: aqua;
+}
+
+.header {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: red;
+}
+
+.content {
+    grid-column: 2;
+    grid-row: 2;
+    background-color: green;
+}
+
+.footer {
+    grid-column: 1;
+    grid-row: 3;
+    grid-column-start: span 2;
+    background-color: yellow;
+}
